--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
 	<script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="game.js"></script>
+    <script src="Letter.js"></script>
+    <script src="Tile.js"></script>
 	
 
 </head>
